# anim_view

./: CMakeLists.txt  README.md  vcpkg.json
data/: imgui.ini
data/Models/Warrok2/: Warrok.model  Warrok.skeleton  dance.animation  dance15.animation  naruto_run.animation  running.animation  sitting_laughing.animation  slap.animation  taunt.animation
data/Models/archer/: Archer.model  Archer.skeleton  idle_examine.animation  shoot_arrow.animation
data/Shaders/: anim.frag  anim.vert  axis.frag  axis.vert  cube.frag  default.frag  default.vert
src/: AnimatedModel.cpp  AnimatedModel.h  AssetLoader.h  Camera.h  ClipPickScene.cpp  ClipPickScene.h  Input.h  Light.h  Material.h  PoseEditScene.cpp  PoseEditScene.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
